# SuperAnswersAngular/src/data-services/models/get-most-recent-questions-request.ts
@@ -1,0 +1,4 @@
+/* tslint:disable */
+export interface GetMostRecentQuestionsRequest {
+  userId?: string;
+}
