# SuperAnswersAngular/src/data-services/models/get-most-recent-questions-response.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+import { Response } from './response';
+import { Question } from './question';
+export interface GetMostRecentQuestionsResponse extends Response {
+  questions?: Array<Question>;
+}
